Starting/stopping applications Updating applications Removed CRUD module
Signed-off-by: Matthias van der Vlies <mvdvlies@gmail.com>

--- a/conf/test-data.yml
+++ b/conf/test-data.yml
@@ -3,5 +3,5 @@ Application(customer-portal):
  vcsType: GIT
  vcsUrl: git@hades:customer-portal.git
  checkedOut: false
- enabled: true
+ enabled: false
  mode: PROD
