Removed eclipse files
Signed-off-by: Matthias van der Vlies <mvdvlies@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Play tmp directory
 tmp/
-eclipse/classes/
+
+# Ignore eclipse folders and files
+eclipse/
+.classpath
+
+# Ignore database directory
 db/
