updated to play 1.2.3
Signed-off-by: Matthias van der Vlies <mvdvlies@gmail.com>

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,7 +5,8 @@ date.format=yyyy-MM-dd
 http.port=9090
 java.source=1.6
 db=fs
-jpa.ddl=update
+hibernate.globally_quoted_identifiers=true 
+jpa.ddl=create-drop
 play.jobs.pool=10
 play.pool=4
 
