re #7 Updated CSS file, added HTML body gradient, updated Log4J config, added modules and logs directories to the GIT ignore file Signed-off-by: Marten Zijlstra <martenhzijlstra@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-# Play tmp directory
+# Play directories
+logs/
 tmp/
 
 # Ignore eclipse folders and files
 eclipse/
+modules/
 .classpath
 .project
 .settings
