--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,7 +6,7 @@ http.port=9090
 java.source=1.6
 
 # Database settings
-db.url=jdbc:h2:mem:play;MODE=MYSQL
+db.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0
 hibernate.globally_quoted_identifiers=true 
 jpa.ddl=update
 
