fixed #20 Failing play applications show as started
Signed-off-by: Matthias van der Vlies <mvdvlies@gmail.com>

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -14,6 +14,9 @@ jpa.ddl=update
 play.jobs.pool=10
 play.pool=4
 
+# Duration for a command to time-out and being shot by the process manager
+command.timeout=120
+
 # Full path to default the Play! executable
 path.play = /usr/local/play/play
 
