--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -5,4 +5,4 @@ log4j.appender.Rolling.File=logs/play-as.log
 log4j.appender.Rolling.MaxFileSize=100KB
 log4j.appender.Rolling.MaxBackupIndex=100
 log4j.appender.Rolling.layout=org.apache.log4j.PatternLayout
-log4j.appender.Rolling.layout.ConversionPattern=%d{ABSOLUTE} %-5p ~ %m%n
+log4j.appender.Rolling.layout.ConversionPattern=%d %-5p ~ %m%n
